--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
   border-radius: 100%;
   color: black;
   box-shadow:
-    220px 150px 0 0 currentColor,
+    220px 160px 0 0 currentColor,
     510px 150px 0 0 currentColor;
 }
 
@@ -22,4 +22,17 @@
   box-shadow:
     220px 220px 0 0 currentColor;
 
+  }
+
+  .eyes {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 10px;
+    left: 170px;
+    border-radius: 100%;
+    color: white; /* *this is overwritten by the .eyes class in the main.css file */
+    box-shadow:
+      195px 320px 0 0 currentColor,
+      300px 320px 0 0 currentColor;
   }
